# NLP_Dataset

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/: __init__.py  config.py
src/clients/: __init__.py  embedding_client.py  llm_client.py  model_cache.py
src/clients/llm_clients/: llm_client.py
src/containers/: unique_list.py
src/schemas/: embedding_schemas.py
src/utilities/: text_cleaning.py
tests/: conftest.py
tests/unit/: test_config.py
